--- a/style.css
+++ b/style.css
@@ -137,6 +137,8 @@ border-radius:4px;
 .second-div-div-more:hover {
   background: #8d8c8c;
 }
+.not-found {background-color:darkkhaki;}
+.write-up {background-color: aqua;}
 
 .highlight {
   color: blueviolet;
@@ -173,5 +175,6 @@ border-radius:4px;
     max-height: 500px; /* expands when menu-toggle is clicked */
   }
 }
+
 
 
